[build-system]
requires = ["setuptools>=63.2"]
build-backend = "setuptools.build_meta"

[project]
name = "srtm_dl"
version = "0.0.3"
authors = [
  { name="Ghasem Abdi", email="ghasem.abdi@yahoo.com" },
]
description = "A Python library (multi-threaded) for retrieving SRTM elevation map of CGIAR-CSI"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "rasterio",
]

[project.urls]
"Homepage" = "https://github.com/Abdi-Ghasem/srtmDownloader"
"Bug Tracker" = "https://github.com/Abdi-Ghasem/srtmDownloader/issues"